-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.2.0 Alpha
-
None
-
qtbase/stable: 71ce869825a0af3fec66c4cd29083ec5d0d76eda
QTextBrowser inherits from QTextEdit, hence we would expect the new placeholderText to work here as well. This is not the case. This can be verified simply from Qt Designer.
Aside this, centering the placehoder text in the QTextEdit control would appear to me to be more sensible than putting it at the top right corner.